packages/next-swc/crates/core/tests/errors/next-font-loaders/not-const/output.js
import inter1 from 'neer-font/google/target.css?{"path":"pages/test.tsx","import":"Inter","arguments":[{"variant":"400"}],"variableName":"inter1"}';
import inter2 from 'neer-font/google/target.css?{"path":"pages/test.tsx","import":"Inter","arguments":[{"variant":"400"}],"variableName":"inter2"}';
var i = 10;
var i2 = 20;
